<resources>
    <string name="app_name">PopularMovies-Stage1</string>
    <string name="release_date">Movie Release date:</string>
    <string name="user_rating">User ratings:</string>
    <string name="add_to_favorite">Add as favorite:</string>
    <string name="movie_overview">Movie Overview:</string>
    <string name="detail_image_error_message">Movie poster is not available</string>
    <string name="detail_error_message">Something wrong, movie data available!</string>
    <string name="original_title">Original Title:</string>
    <string name="popular_movies">Popular movies</string>
    <string name="top_movies">Top rated movies</string>
    <string name="something_wrong">Something went wrong...Please try later!</string>
</resources>
