<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sm.popularmovies.ui.MovieDetailsActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/movie_poster"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:visibility="gone"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
                android:id="@+id/title"/>
            <LinearLayout
                android:id="@+id/content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:orientation="vertical"
                android:layout_below="@id/movie_poster">
                <ProgressBar
                    android:id="@+id/loadingprogress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:foregroundGravity="center_horizontal"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:text="@string/original_title"
                    android:id="@+id/original_title"/>
                <TextView
                    android:id="@+id/original_title_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:text="@string/release_date"
                    android:id="@+id/release_date"/>
                <TextView
                    android:id="@+id/release_date_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_rating"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"
                    android:id="@+id/user_rating"/>

                <TextView
                    android:id="@+id/user_rating_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_overview"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:id="@+id/movie_synopsis"/>
                <TextView
                    android:id="@+id/movie_synopsis_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>