<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:visibility="visible"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:id="@+id/title"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/movie_poster"
        android:layout_marginLeft="10dp"
        android:text="Title"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"/>
    <ImageView
        android:id="@+id/movie_poster"
        android:layout_width="100dp"
        android:layout_height="120dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_alignParentLeft="true"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:text="@string/original_title"
        android:id="@+id/original_title"
        android:layout_toRightOf="@id/movie_poster"
        android:layout_below="@id/title"
        android:visibility="visible"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="15dp"/>
    <TextView
        android:id="@+id/original_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/original_title"
        android:layout_below="@id/title"
        android:layout_marginLeft="5dp"
        android:hint="original title"
        android:visibility="visible"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:text="@string/release_date"
        android:id="@+id/release_date"
        android:layout_below="@id/original_title"
        android:layout_toRightOf="@id/movie_poster"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="15dp" />
    <TextView
        android:id="@+id/release_date_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:hint="Example"
        android:layout_below="@id/original_title"
        android:layout_toRightOf="@id/release_date"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="15dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_rating"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:id="@+id/user_rating"
        android:layout_below="@id/movie_poster"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"/>

            <RatingBar
                android:id="@+id/user_rating_tv"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/movie_poster"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@id/user_rating"
                android:numStars="5"
                android:rating="2"
                android:stepSize="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_to_favorite"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:id="@+id/add_as_favorite"
                android:layout_below="@id/user_rating"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"/>
            <Button
                style="@style/AlertDialog.AppCompat.Light"
                android:id="@+id/add_to_favorite_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:hint="Example"
                android:layout_below="@id/user_rating"
                android:layout_toRightOf="@id/add_as_favorite"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:text="@string/movie_overview"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:id="@+id/movie_synopsis"
        android:layout_below="@id/add_as_favorite"/>
    <TextView
        android:id="@+id/movie_synopsis_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Example"
        android:layout_toRightOf="@id/movie_synopsis"
        android:layout_below="@id/add_as_favorite"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="5dp"
        />
    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/trailer_list"
        android:layout_below="@id/movie_synopsis_tv"
        android:layout_margin="15dp"
        android:layout_marginTop="10dp">
    </ListView>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>